z-index fixes

--- a/src/components/App/style.scss
+++ b/src/components/App/style.scss
@@ -56,7 +56,6 @@
 
 #cdm-chat-open {
   position: relative;
-  z-index: 1000;
 }
 .cdm-chat {
   position: fixed;
@@ -67,6 +66,7 @@
   background: #fff;
   display: none;
   z-index: 2147483647;
+  z-index: 2147483649;
   &--opened {
     display: block;
   }
@@ -115,7 +115,7 @@
     max-width: 100%;
     width: 100%;
     @media (max-width: 768px) {
-      height: 100%;
+      
       display: flex;
       flex-direction: column;
       justify-content: stretch;
@@ -132,6 +132,7 @@
     outline: 0;
     cursor: pointer;
     opacity: .8;
+    z-index: 2147483649;
     &:hover, &:active, &:focus {
       opacity: 1;
     }
@@ -333,7 +334,7 @@
   }
 }
 
-.cdm-btn {
+.cdm-btn.cdm-btn {
     padding: 10px 20px;
     background: #63c669;
     transition: all .3s ease;
